--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -32,27 +32,11 @@
 
 
     <string name="app_name">Hand-held spectro project</string>
-    <string name="ble_not_supported">BLE is not supported</string>
-    <string name="label_data">Data:</string>
-    <string name="label_device_address">Device address:</string>
-    <string name="label_state">State:</string>
-    <string name="no_data">No data</string>
-    <string name="connected">Connected</string>
-    <string name="disconnected">Disconnected</string>
-    <string name="title_devices">BLE Device Scan</string>
-    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
-    <string name="unknown_device">Unknown device</string>
-    <string name="unknown_characteristic">Unknown characteristic</string>
-    <string name="unknown_service">Unknown service</string>
-    <string name="menu_connect">Connect</string>
-    <string name="menu_disconnect">Disconnect</string>
-    <string name="menu_scan">Scan</string>
-    <string name="menu_stop">Stop</string>
-    <string name="intro_message"><![CDATA[This sample demonstrates how to use the Bluetooth LE Generic Attribute Profile(GATT) to transmit arbitrary data between devices.]]></string>
     <string name="title" />
     <string name="message" />
     <string name="ok" />
     <string name="stop_measuring">Save measuring</string>
-    <string name="no_files_found">NO FILES FOUND</string>
+    <string name="storage">Storage</string>
+    <string name="arrow" translatable="false">&#160;&#160;&#160;>&#160;&#160;&#160;&#160;</string>
 
 </resources>
