--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,26 +35,10 @@
 
 
     <string name="app_name">Hand-held spectro project</string>
-    <string name="ble_not_supported">BLE не поддерживается</string>
-    <string name="label_data">Данные:</string>
-    <string name="label_device_address">"Адрес устройства: "</string>
-    <string name="label_state">Состояние:</string>
-    <string name="no_data">Нет данных</string>
-    <string name="connected">Подключено</string>
-    <string name="disconnected">Отключено</string>
-    <string name="title_devices">Сканирование BLE устройств</string>
-    <string name="error_bluetooth_not_supported">Bluetooth не поддерживается</string>
-    <string name="unknown_device">Неопознанное устройство</string>
-    <string name="unknown_characteristic">Неопознанная характеристика</string>
-    <string name="unknown_service">Неопознанный сервис</string>
-    <string name="menu_connect">Подключить</string>
-    <string name="menu_disconnect">Отключить</string>
-    <string name="menu_scan">Сканировать</string>
-    <string name="menu_stop">Остановить</string>
-    <string name="intro_message"><![CDATA[This sample demonstrates how to use the Bluetooth LE Generic Attribute Profile(GATT) to transmit arbitrary data between devices.]]></string>
-    <string name="title" />
+    <string name="title" translatable="false" />
     <string name="message" translatable="false" />
     <string name="ok" translatable="false" />
     <string name="stop_measuring">Сохранить измерения</string>
-    <string name="no_files_found">NO FILES FOUND</string>
+    <string name="storage">Хранилище</string>
+    <string name="arrow" translatable="false">&#160;&#160;&#160;>&#160;&#160;&#160;&#160;</string>
 </resources>
