Reworked saving system and reconnection to BLE.

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -38,5 +38,6 @@
     <string name="stop_measuring">Save measuring</string>
     <string name="storage">Storage</string>
     <string name="arrow" translatable="false">&#160;&#160;&#160;>&#160;&#160;&#160;&#160;</string>
+    <string name="reload">Обновить</string>
 
 </resources>
