--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,36 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="coming_soon">Coming soon</string>
-
     <string name="spectrograph">SpectroGraph</string>
-
     <string name="choose_measuring_mode">Choose measuring mode</string>
     <string name="simple_measuring_mode">Simple measuring mode</string>
     <string name="autoset_measuring_mode">Autoset measuring mode</string>
-
     <string name="set_up_measuring_configuration">Set up measuring configuration</string>
     <string name="measurement_mode">Measurement mode:</string>
     <string name="gain">Gain:</string>
     <string name="integration_time">Integration time</string>
     <string name="start_measuring">Start measuring</string>
-
     <string name="scan_ble">Scan BLE</string>
-
-
     <string name="scan_in_progress">Scan in progress</string>
     <string name="loading">Loading…</string>
     <string name="ups">Ups</string>
     <string name="not_find">We do not find active devices</string>
     <string name="acception">You must accept the Bluetooth and GPS permissions or must turn on the Bluetooth and GPS</string>
-
     <string name="set_number">Please set number in range from 0 to 255!</string>
     <string name="set_digits">Please set number in integer form using only digits!</string>
     <string name="mode1">Continuous reading of VBGY (7262) / STUV (7263)</string>
     <string name="mode2">Continuous reading of GYOR (7262) / RTUX (7263)</string>
     <string name="mode3">Continuous reading of all channels</string>
     <string name="mode4">One-shot reading of all channels</string>
-
-
     <string name="app_name">Hand-held spectro project</string>
     <string name="title" />
     <string name="message" />
@@ -38,6 +29,6 @@
     <string name="stop_measuring">Save measuring</string>
     <string name="storage">Storage</string>
     <string name="arrow" translatable="false">&#160;&#160;&#160;>&#160;&#160;&#160;&#160;</string>
-    <string name="reload">Обновить</string>
-
+    <string name="reload">Update connection</string>
+    <string name="start_measure">New experiment</string>
 </resources>
