--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -30,5 +30,5 @@
     <string name="storage">Storage</string>
     <string name="arrow" translatable="false">&#160;&#160;&#160;>&#160;&#160;&#160;&#160;</string>
     <string name="reload">Update connection</string>
-    <string name="start_measure">New experiment</string>
+    <string name="start_measure">New point</string>
 </resources>
