--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,5 @@
     <string name="storage">Хранилище</string>
     <string name="arrow" translatable="false">&#160;&#160;&#160;>&#160;&#160;&#160;&#160;</string>
     <string name="reload">Обновить подключение</string>
-    <string name="start_measure">Новый эксперимент</string>
+    <string name="start_measure">Новая точка</string>
 </resources>
